<resources>
    <string name="app_name">Iread</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="books_item_icon">Book Icon</string>
    <string name="search_label">Search</string>
    <string name="search_hint">search books</string>
    <string name="loading">loading</string>
    <string name="home_shop_by_department">Shop By Department</string>
    <string name="department_textview1_text">Fiction</string>
    <string name="department_textview2_text">Academics</string>
    <string name="department_textview3_text">Comics</string>
    <string name="department_textview4_text">Biography</string>
    <string name="home_recommendation">Recommendations</string>
    <string name="home_new_books">New Books</string>
    <string name="test_string">Innovation and Entrepreneursh</string>
    <string name="title_activity_search_book">Search</string>
    <string name="progress_dialog_please_wait">Please Wait...</string>
    <string name="title">Title</string>
    <string name="title_activity_thank_you">Thank You</string>
    <string name="order_summary_header">Order Summary</string>
    <string name="shipping_address_header">Shipping Address</string>
    <string name="address_line_1_dummy_text">Vijay Vikram</string>
    <string name="address_line_2_dummy_text">2e. dhawal giri appartment</string>
    <string name="address_line_3_dummy_text">noida uttarpradesh</string>
    <string name="address_line_4_dummy_text">201301</string>
    <string name="total_ammount_header">Total Amount</string>
    <string name="order_date_header">Order Date</string>
    <string name="order_id_header">ORDER ID</string>
    <string name="order_id_dummy_text">13245</string>
    <string name="payment_method_header">Payment Method</string>
    <string name="payment_method_dummy_text">COD</string>
    <string name="how_it_works">How it Works</string>
    <string name="contact_us_text">Contact Us</string>
    <string name="phone_number">1800-103-7323</string>
    <string name="title_activity_my_cart">My Cart</string>
    <string name="title_activity_add_address">AddAddress</string>
    <string name="full_name_hint">Full Name</string>
    <string name="address_line_1_hint">Address line one</string>
    <string name="address_line_2_hint">Address line two</string>
    <string name="city_hint">Town / City</string>
    <string name="state_hint">State</string>
    <string name="pincode_hint">PinCode</string>
    <string name="mobile_number_hint">enter 10 digit mobile no.</string>
    <string name="mobile_number_hint2">+91</string>
    <string name="proceed_to_payment_text">Proceed To Payment</string>
    <string name="title_activity_login">Login</string>
    <string name="signin_checkout_faster">Sign In checkout faster</string>
    <string name="email_address_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password_hint">Forgot Password?</string>
    <string name="login_with_facebook_gmail_text">Login with facebook / google+</string>
    <string name="title_activity_select_payment_method">Payment</string>
    <string name="amount_payable_text">Amount Payable</string>
    <string name="amount_payable_dummy_text">Rs. 482</string>
    <string name="select_payment_method_text">Select Payment Method</string>
    <string name="coupon_entry_hint">Apply Coupon Code</string>
    <string name="coupon_message_dummy_text">Congrats! you had just save Rs50.</string>
    <string name="title_activity_main_login">MainLogin</string>
    <string name="signin_text">Sign in</string>
    <string name="forgot_password_hint2">Forgot Password?</string>
    <string name="checkout_button_text">Checkout</string>
    <string name="total_cost_text">Total Order</string>
    <string name="shipping_charge_text">Shipping Charges</string>
    <string name="shipping_charges_dummy_text">50</string>
    <string name="total_payable_text">Total payable</string>
    <string name="title_activity_choose_delivery_address">Delivery Address</string>
    <string name="add_new_address_button_text">Add new address +</string>
    <string name="phone_dummy_text">ph. 7042082421</string>
    <string name="cart_book_name">A guide to Mechanism in Organic Chemistry for the Jee</string>
    <string name="cart_book_author_name">Author Name</string>
    <string name="cart_book_item_price">Rs. 480</string>
    <string name="cart_item_initial_payable">387</string>
    <string name="mrp_text">MRP :</string>
    <string name="my_store_credit">My Store Credits</string>
    <string name="store_credit_issue_date_tag">Issue Date</string>
    <string name="store_credit_issue_date_dummydata">27-08-2015</string>
    <string name="colon"> : </string>
    <string name="store_credit_amount_tag">Amount</string>
    <string name="store_credit_amount_dummydata">125</string>
    <string name="store_credit_orderid_tag">Order ID</string>
    <string name="store_credit_orderid_dummydata">23456</string>
    <string name="store_credit_status_tag">Status</string>
    <string name="store_credit_status_dummydata">Approved</string>
    <string name="rent_start_price_tag">Rent starts from :</string>
    <string name="rent_start_price_dummydata">Rs. 98</string>
    <string name="popularity">Popularity</string>
    <string name="mrp">Price</string>
    <string name="signup_text">Sign Up</string>
    <string name="check_email_signup_text">Please Check your Email and Set your Password</string>
    <string name="continue_without_login_text">Continue Without Login</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="reset_password_tag">Reset Password</string>
    <string name="reset_password_message">Its totally human to forget your passwords !..We are here to assist.. Please submit your E-mail address to recover your password..</string>
    <string name="email_edittext_hint">E-mail Address</string>
    <string name="reset_your_password_button_hint">Reset Your Password</string>
    <string name="title_activity_order_summary">Order Summary</string>
    <string name="shipping_charge_tag">Shipping Charge</string>
    <string name="store_credit_tag">Store Credit</string>
    <string name="coupon_discount_tag">Coupon Discount</string>
    <string name="total_payable_tag">Total Payable</string>
    <string name="shipping_address_tag">Shipping Address</string>
    <string name="payment_mode_tag">Payment Mode :</string>
    <string name="payment_mode_dummy_text">Cash On Delivery</string>
    <string name="make_payment_button_text">Make Payment</string>
    <string name="book_name_dummy_text">It Started with a Friend Request</string>
    <string name="by_tag">By :</string>
    <string name="author_name_dummy_text">Sudeep NagarKar</string>
    <string name="book_description_dummy_text">It Started with a friend request is a story of true , solid love and stead fast friendship,dry humor and is based on actual people from authors life.</string>
    <string name="rs_tag">Rs.</string>
    <string name="days30_tag">30 days</string>
    <string name="days90_tag">90 days</string>
    <string name="days180_tag">180 days</string>
    <string name="days360_tag">360 days</string>
    <string name="rent_tag">Rent : Rs.</string>
    <string name="rent_dummy_text">51</string>
    <string name="save_tag">(You Save: Rs</string>
    <string name="per_sign_text">)</string>
    <string name="delivery_detail_tag">Delivery Details</string>
    <string name="deliver_info1_text">Delivery in 3-5 business days</string>
    <string name="deliver_info2_text">Same day Shipping</string>
    <string name="summary_of_the_book_text">Summary of the book</string>
    <string name="about_author_text">About Author</string>
    <string name="book_details_text">Book Details</string>
    <string name="smiliar_books_tag">Similar Books</string>
    <string name="initial_payable_dummy_value">157</string>
    <string name="refund_of_rs_tag">Refund of Rs.</string>
    <string name="date_dummy_value">Sep 13th, 2015</string>
    <string name="rent_now_text">Rent Now</string>
    <string name="apply">Apply</string>
    <string name="continue_shopping_button_text">Continue Shopping</string>
    <string name="title_activity_book_shelf">BookShelf</string>
    <string name="on_return_tag2">on return today</string>
    <string name="return_tag">Return</string>
    <string name="rent_start_from_tag">Rent Starts from : Rs.</string>
    <string name="add_to_cart_tag">Add To Cart</string>
    <string name="delivery_tag">Delivered in 2-3 Business Days</string>
    <string name="summary_of_the_book_dummy">is tehre is a way of testing  the succes of a relationship? is it right to continue to be in a unhealty relationship with lorem ipsum lorem ipsum</string>
    <string name="you_rented_tag">You Rented This Book For Rs.</string>
    <string name="book_cart">Cart</string>
    <string name="book_shelf">Bookshelf</string>
    <string name="return_book">Return Books</string>
    <string name="my_orders">My Orders</string>
    <string name="store_credits">Store Credits</string>
    <string name="my_profile">My Profile</string>
    <string name="my_profile_header">My Profile Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_alternate_address_hint">Alternate E-mail Address</string>
    <string name="landline_number_hint">Landline</string>
    <string name="mobile_number_hint3">+91 Enter 10 digits Mobile no</string>
    <string name="profile_save_button">Save</string>
    <string name="profile_birthdate_text">Birth Date</string>
    <string name="profile_username">v.chauhan@indiareads.com</string>
    <string name="my_addresses_tag">My Addresses</string>
    <string name="logout_tag">Logout</string>
    <string name="order_placed_tag">Order Placed</string>
    <string name="order_placed_date_dummy_text">Sep 2, 2015</string>
    <string name="prepairing_dispatch_tag">Preparing for Dispatch</string>
    <string name="order_dispatch_date_text">Sep 2, 2015</string>
    <string name="details_tag">Details</string>
    <string name="initial_payable">Initial Payable: Rs</string>
    <string name="tracking_details_tag">Tracking Details</string>
    <string name="tracking_id_tag">Tracking ID</string>
    <string name="tracking_id_dummytext">NA</string>
    <string name="carrier_tag">Carrier</string>
    <string name="title_store_credits">Store Credit</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_category_listing">Category</string>
    <string name="total_refund_tag">Total Refund</string>
    <string name="total_refund_dummy_text">347</string>
    <string name="refund_mode_tag">Refund Mode</string>
    <string name="refund_mode_dummy_text">Store Credits</string>
    <string name="pickup_address_address_tag">Pick Up Address</string>
    <string name="title_activity_return_summary">Return Summary</string>
    <string name="rent_applicable_tag">Rent Applicable</string>
    <string name="refund_price_dummydata">Rs. 38</string>
    <string name="refund_amount_tag">Refund Amount</string>
    <string name="title_activity_pickup_details">Pickup Details</string>
    <string name="proceed_button_text">Proceed</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_profile_page">My Profile</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_my_account">My Profile</string>
    <string name="unchecked">unchecked</string>
    <string name="delete">Delete</string>
    <string name="add_to_cart">add_to_cart</string>
    <string name="state_text">Uttar Pradesh</string>
    <string name="comma">,</string>
    <string name="city_text">Noida</string>
    <string name="Rs_text">Rs.</string>
    <string name="login">Login</string>
</resources>