<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="10dp"
    android:paddingBottom="10dp"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--address select button linear layout  -->

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/select_address_image"
            android:scaleType="fitXY"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:tag="unchecked"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/unchecked">
        </ImageView>

    </LinearLayout>


    <!-- linear layout of address lines -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
          android:paddingTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:text="@string/address_line_1_dummy_text"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/address_line_1"
            android:text="@string/address_line_2_dummy_text"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
        android:id="@+id/address_line_2"
        android:text="@string/address_line_3_dummy_text"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/state"
                android:text="@string/state_text"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/comma"
                android:layout_width="wrap_content"
                android:layout_marginLeft="3dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/city"
                android:text="@string/city_text"
                android:layout_width="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_height="match_parent" />

        </LinearLayout>


        <TextView
            android:id="@+id/pincode"
            android:text="@string/address_line_4_dummy_text"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phone_number"
            android:text="@string/phone_dummy_text"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_height="wrap_content" />



        </LinearLayout>







    </LinearLayout>
</android.support.v7.widget.CardView>