<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context="com.indiareads.retailapp.views.activities.MainActivity">-->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_label"/>

    <!-- Cart-->
    <item android:id="@+id/action_cart"
        android:icon="@drawable/book_cart"
        android:title="@string/book_cart"
        app:showAsAction="always" />



    <item android:id="@+id/overflow_menu"
        android:icon="@drawable/ic_action_overflow"
        android:title="Menu"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_login"
                android:icon="@drawable/my_profile_menu_icon"
                android:title="@string/login"
                app:showAsAction="never"/>

        </menu>
    </item>
</menu>
