<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="16dp"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="0dip"
    card_view:cardPreventCornerOverlap="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id_header"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="13dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/colon"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/primary_dark_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id_dummy_text"
            android:id="@+id/order_id"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textColor="@color/primary_dark_material_light"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed_tag"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/colon"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/primary_dark_material_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed_date_dummy_text"
            android:id="@+id/order_placed_date"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:textColor="@color/primary_dark_material_light"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_book_name"
            android:id="@+id/book_name"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="12dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_book_author_name"
            android:id="@+id/author_name"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="12dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepairing_dispatch_tag"
            android:textColor="#2c9415"
            android:textSize="12dp"
            android:id="@+id/order_status"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:id="@+id/dot_text"
            android:text="@string/colon"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="#2c9415" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_dispatch_date_text"
            android:id="@+id/order_status_date"
            android:layout_marginLeft="5dp"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="#2c9415"
            />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:text="@string/details_tag"
            android:textAllCaps="false"
            android:textColor="@color/primary_dark_material_light"
            android:textSize="12sp"
            android:id="@+id/order_details_button"
            android:background="@color/whiteColor" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>

</android.support.v7.widget.CardView>


