<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="0dip"
    android:layout_height="wrap_content"
    tools:context=".views.activities.ProfilePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/complete_item"
        android:background="#ffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/book_item_imageview"
                android:contentDescription="@string/books_item_icon"
                android:layout_width="92dp"
                android:background="@drawable/test"
                android:scaleType="fitXY"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/cart_book_name"
                android:id="@+id/book_name"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_tag"
                    android:textSize="12sp"
                    android:textColor="@color/material_blue_grey_800"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cart_book_author_name"
                    android:textSize="12sp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/material_blue_grey_800"
                    android:id="@+id/book_author_name"/>

            </LinearLayout>






            <View
                android:layout_width="match_parent"
                android:background="@color/greyborder"
                android:layout_marginTop="15dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingTop="2dp"
                android:orientation="horizontal"
                >



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/add_to_cart_linear_layout"
                    android:gravity="center_vertical"
                    android:tag="@string/add_to_cart"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:text="@string/add_to_cart_tag"
                        />

                    <ImageView
                        android:layout_width="13dp"
                        android:layout_height="13dp"
                        android:layout_gravity="center"
                        android:tag="@string/unchecked"
                        android:layout_marginLeft="7dp"
                        android:id="@+id/add_to_cart_image_view"
                        android:src="@drawable/unchecked"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="right">

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:tag="@string/delete"
                        android:id="@+id/delete_book_image_view"
                        android:gravity="right">

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="right"
                            android:background="@drawable/delete_black"/>
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>




        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
